--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -194,12 +194,12 @@ a:hover {
   min-height: 1px;
   margin-left: 20px;
 }
-.container,
-.navbar-static-top .container,
-.navbar-fixed-top .container,
-.navbar-fixed-bottom .container {
-  width: 940px;
-}
+/* .container, */
+/* /1* .navbar-static-top .container, *1/ */
+/* .navbar-fixed-top .container, */
+/* .navbar-fixed-bottom .container { */
+/*   width: 940px; */
+/* } */
 .span12 {
   width: 940px;
 }
